# eVTOLSim

./: CMakeLists.txt  README.md  main.cpp
ev/inc/: EVSpec.h  ev.h
ev/src/: ev.cpp
platform/inc/: platform.h
platform/src/: platform.cpp
queue/inc/: SimQueue.h  capQueue.h
random/inc/: evenlyGen.h  simpleRandomGen.h
random/src/: evenlyGen.cpp  simpleRandomGen.cpp
test/: CMakeLists.txt  EVTest.cpp  platformTest.cpp  simQueueTest.cpp
